# rust_todo_app

./: .gitignore  Cargo.toml
src/: main.rs
src/database/: controller.rs  error.rs  repository.rs
src/database/model/: todo_entry.rs
src/rest_controller/: controller.rs
todo_backend/: Cargo.toml
todo_backend/src/: main.rs
todo_backend/src/database/: error.rs  repository.rs
todo_backend/src/model/: mod.rs
todo_backend/src/rest_controller/: controller.rs
