[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0"
surreal-id = "0.2.1"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
log = "0.4.0"
env_logger = "0.10.0"